--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
           </div>
           <div class="nav-right">
             <nav class="nav-links">
-              <a href="index.html" class="active">Home</a>
-              <a href="users.html">For Users</a>
-              <a href="testers.html">Testers</a>
-              <a href="marketing.html">Marketing</a>
-              <a href="support.html">Support</a>
-            </nav>
+  <a href="index.html" class="active">Home</a>
+  <a href="users.html">For Users</a>
+  <a href="testers.html">Testers</a>
+  <a href="tester-portal.html">Tester Portal</a>
+  <a href="marketing.html">Marketing</a>
+  <a href="support.html">Support</a>
+</nav>
+
           </div>
         </div>
       </div>
@@ -160,3 +162,4 @@
     </footer>
   </body>
 </html>
+
