Update portal password in tester-portal.html

--- a/tester-portal.html
+++ b/tester-portal.html
@@ -217,7 +217,7 @@
     <script>
       (function () {
         // NOTE: This is a light gate only. For real security, use server-side auth.
-        const PORTAL_PASSWORD = "CHANGE_THIS_PASSWORD"; // <<< set your password here
+        const PORTAL_PASSWORD = "Welcome1"; // <<< set your password here
 
         const form = document.getElementById("portal-password-form");
         const input = document.getElementById("portal-password");
