--- a/tester-portal.html
+++ b/tester-portal.html
@@ -154,7 +154,7 @@
         </p>
         <div class="portal-actions">
           <a
-            href="YOUR_APK_URL_HERE.apk"
+            href="https://github.com/marolam/prox/releases/download/v1.1/app-release.apk"
             class="btn-primary"
             download
           >
