--- a/users.html
+++ b/users.html
@@ -21,14 +21,13 @@
           </div>
           <div class="nav-right">
             <nav class="nav-links">
-  <a href="index.html" class="active">Home</a>
-  <a href="users.html">For Users</a>
-  <a href="testers.html">Testers</a>
-  <a href="tester-portal.html">Tester Portal</a>
-  <a href="marketing.html">Marketing</a>
-  <a href="support.html">Support</a>
-</nav>
-
+              <a href="index.html">Home</a>
+              <a href="users.html" class="active">For Users</a>
+              <a href="testers.html">Testers</a>
+              <a href="tester-portal.html">Tester Portal</a>
+              <a href="marketing.html">Marketing</a>
+              <a href="support.html">Support</a>
+            </nav>
           </div>
         </div>
       </div>
@@ -94,20 +93,11 @@
 
         <form
           class="simple-form"
-          action="https://formsubmit.co/YOUR_USER_WAITLIST_EMAIL_HERE"
+          action="https://script.google.com/macros/s/AKfycby1msi0HCL9ETusO7Xl-SlLav4O4UIK6kcGNcdjCx1dykcvO-53qolegLP5a84ATxwvzg/exec"
           method="POST"
+          onsubmit="handleUserWaitlistSubmit()"
         >
-          <input type="hidden" name="_captcha" value="false" />
-          <input
-            type="hidden"
-            name="_subject"
-            value="New user waitlist signup"
-          />
-          <input
-            type="hidden"
-            name="_template"
-            value="table"
-          />
+          <input type="hidden" name="formType" value="user-waitlist" />
 
           <label>
             Name
@@ -121,19 +111,25 @@
 
           <label>
             City / Region
-            <input type="text" name="location" required />
+            <input type="text" name="subject" required />
           </label>
 
           <label>
             How do you see yourself using Prox?
             <textarea
-              name="use_case"
+              name="message"
               rows="3"
               placeholder="Finding help, offering services, meeting locals..."
             ></textarea>
           </label>
 
           <button type="submit" class="btn-primary">Join the Waitlist</button>
+
+          <div
+            id="user-waitlist-status"
+            class="muted"
+            style="margin-top: 0.6rem; font-size: 0.85rem;"
+          ></div>
         </form>
       </div>
     </section>
@@ -145,7 +141,15 @@
         <p class="footer-tagline">Let what you seek find you.</p>
         <p class="footer-copy">&copy; 2025 Prox. All rights reserved.</p>
       </div>
+      <script>
+        function handleUserWaitlistSubmit() {
+          var statusEl = document.getElementById("user-waitlist-status");
+          if (statusEl) {
+            statusEl.textContent =
+              "Thank you! You’re on the user waitlist for Prox.";
+          }
+        }
+      </script>
     </footer>
   </body>
 </html>
-
